# django-phone-login

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_core.in  requirements_core.txt  requirements_dev.txt  setup.cfg  tasks.py
.github/workflows/: main.yml
phone_login/: models.py  urls.py  utils.py
phone_login/backends/: phone_backend.py
phone_login/migrations/: 0001_initial.py
requirements/: requirements-codestyle.txt  requirements-documentation.txt  requirements-mandatory.txt  requirements-optionals.txt  requirements-packaging.txt  requirements-testing.txt
tests/: settings.py  test_backend.py  test_otp.py  test_users.py  urls.py
