[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip = ".tox"
atomic = true
multi_line_output = 5
known_standard_library = "types"
known_first_party = "tests"
known_third_party = ["django", "phonenumber_field", "rest_framework", "sendsms"]

[tool.commitizen]
version = "1.1.3"
version_files = [
    "phone_login/__init__.py",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false
# changelog_file = "CHANGELOG.md"
# changelog_incremental = true
