[metadata]
name = django-phone-login
version = attr: phone_login.__version__
description = Django Phone Login: Login with OTP
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
author = Ray Ch
author_email = ray@jhink.com
keywords = phone OTP login authentication
license = BSD-2-Clause License
url = https://github.com/wejhink/django-phone-login/
platforms = any
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Bug Tracker = https://github.com/wejhink/django-phone-login/issues
    Changelog = https://github.com/wejhink/django-phone-login/blob/master/CHANGELOG.md
    Documentation = https://github.com/wejhink/django-phone-login/blob/master/README.md
    Download = https://pypi.org/project/django-phone-login/#files
    Source = https://github.com/wejhink/django-phone-login/

[options]
packages = phone_login
include_package_data = True
python_requires = >=3.6
install_requires =
    django-phonenumber-field
    django-sendsms

# --- Individual linter configuration ---------------------------------------

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,.tox

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,venv

# [mypy]
# ignore_missing_imports = True
# follow_imports = skip
# strict_optional = True
# disallow_untyped_defs = True

# --- See pyproject.toml for other linter configurations (black, isort) -----

# --- See pyproject.toml for commitizen configuration -----------------------

# --- Coverage configuration ------------------------------------------------

[coverage:run]
omit =
    venv/*
    tests/*
    .tox/*
    tasks.py

branch = True

[coverage:report]
skip_covered = True

show_missing = True

# --- pytest configuration --------------------------------------------------

# See warning at https://docs.pytest.org/en/stable/reference/customize.html#setup-cfg
# I put the config here because I somehow couldn't get tox to play nicely with settings in pyproject.toml

[tool:pytest]
django_find_project = false
addopts =
    --cov=phone_login --cov-append --cov-report html --cov-report xml --cov-report term-missing:skip-covered -s -vv
DJANGO_SETTINGS_MODULE = tests.settings
log_cli = 1
testpaths = tests
python_paths = .

# --- tox automation configuration -------------------------------------------

[tox:tox]
envlist = lint, py36, py37, py38, py39, py310
isolated_build = True

[gh-actions]
python =
    3.10: py310
    3.9: py39
    3.8: lint, py38
    3.7: py37
    3.6: py36

[testenv:lint]
skip_install = True
basepython = python
deps =
    -r{toxinidir}/requirements_dev.txt
commands =
    # invoke lint
    # invoke's pty=True not supported on Windows
    # mypy phone_login
    black . --check
    isort --check-only --profile black .
    flake8 tests phone_login

[testenv:docs]
basepython = python
commands = mkdocs build
deps =
    -rrequirements/requirements-testing.txt
    -rrequirements/requirements-documentation.txt

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -r{toxinidir}/requirements_dev.txt
commands =
    pytest
